<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FragmentLogin">

    <ImageView
            android:layout_width="279dp"
            android:layout_height="240dp" app:srcCompat="@drawable/logobig" android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txtUser" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.287"/>
    <Button
            android:text="@string/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:background="@drawable/personalized_button"
            android:onClick="handleBtnLogin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.846"
            android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
            android:textColorHighlight="@color/black" app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:onClick="handleBtnRegister"
            android:backgroundTint="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.175"
            app:layout_constraintVertical_bias="0.746" android:backgroundTintMode="src_in"
            style="@style/Widget.Material3.Button"
            android:background="@drawable/personalized_button" app:strokeColor="#0B0A0A" app:strokeWidth="2dp"/>
    <Button
            android:text="@string/forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRecoveryPassword"
            android:background="@drawable/personalized_button"
            android:backgroundTint="@color/black"
            android:onClick="handleBtnRecoveryPass"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.777"
            app:layout_constraintVertical_bias="0.746"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.519"
            android:id="@+id/txtUser"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.647"
            android:id="@+id/txtPassword"
            app:passwordToggleEnabled="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp" app:layout_constraintHorizontal_bias="1.0">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/lbl_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txtUser" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:textSize="34sp" android:textStyle="bold"
            app:layout_constraintVertical_bias="0.818"/>
</androidx.constraintlayout.widget.ConstraintLayout>