<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipeRecoveryFragment"
        tools:context=".FragmentRecoveryPassword">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ProgressBar
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="234dp"
                android:layout_height="42dp"
                android:id="@+id/progressBar"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
        <Button
                android:text="@string/btn_recovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnRecoveryPass"
                android:onClick="handleBtnRecovery"
                android:background="@drawable/personalized_button"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="25dp" android:layout_marginEnd="25dp"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.746"/>

        <Button
                android:visibility="invisible"
                android:text="@string/btn_verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnVerifyCode"
                android:onClick="handleBtnVerifyCode"
                android:background="@drawable/personalized_button"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="25dp" android:layout_marginEnd="25dp"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.746"/>

        <Button
                android:visibility="invisible"
                android:text="@string/btn_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnChangePassword"
                android:onClick="handleBtnChangePassword"
                android:background="@drawable/personalized_button"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="25dp" android:layout_marginEnd="25dp"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.746"/>

        <ImageView
                android:src="@drawable/logobig"
                android:layout_width="96dp"
                android:layout_height="99dp" android:id="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textEmail" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.0"
                app:layout_constraintHorizontal_bias="0.257" android:layout_marginTop="40dp"/>
        <TextView
                android:text="@string/app_name"
                android:textSize="34sp" android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView10"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textVerifyCode" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.628"
                app:layout_constraintVertical_bias="0.537"/>
        <TextView
                android:text="@string/txt_email"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.107" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/txtEmail" app:layout_constraintVertical_bias="1.0"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
                app:layout_constraintVertical_bias="0.4" android:id="@+id/txtEmail"
                app:layout_constraintHorizontal_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_email"/>
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
                android:visibility="invisible"
                android:text="@string/txt_cod_recovery"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textVerifyCode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.107" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/txtEmail" app:layout_constraintVertical_bias="1.0"/>
        <com.google.android.material.textfield.TextInputLayout
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
                app:layout_constraintVertical_bias="0.4" android:id="@+id/txtVerifyCode"
                app:layout_constraintHorizontal_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/placeholder_verify_code"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:visibility="invisible"
                android:text="@string/txt_password"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textPassword"
                app:layout_constraintBottom_toTopOf="@+id/txtPassword" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.091"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail" app:layout_constraintVertical_bias="1.0"
                android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputLayout
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
                app:layout_constraintVertical_bias="0.580" android:id="@+id/txtPassword">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:visibility="invisible"
                android:text="@string/txt_password2"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textPassword2"
                android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.114"
                app:layout_constraintBottom_toTopOf="@+id/txtPassword2"
                app:layout_constraintTop_toBottomOf="@+id/txtPassword" app:layout_constraintVertical_bias="1.0"/>

        <com.google.android.material.textfield.TextInputLayout
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
                app:layout_constraintVertical_bias="0.72" android:id="@+id/txtPassword2">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/txt_password2"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
                android:text="@string/txt_recovery_title"
                android:textSize="34sp" android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView11"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/textEmail"
                app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintVertical_bias="0.729"/>
        <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/turquoise"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView10"
                app:layout_constraintBottom_toTopOf="@+id/textView11" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.687"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>