<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".FragmentRegister">

    <ImageView
            android:layout_width="270dp"
            android:layout_height="204dp" app:srcCompat="@drawable/logobig" android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_title"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txtRegisterEmail"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:textSize="34sp" android:textStyle="bold"
            app:layout_constraintVertical_bias="0.087" app:layout_constraintHorizontal_bias="0.523"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
            app:layout_constraintVertical_bias="0.72" android:id="@+id/txtPassword2">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/txt_password2"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
            app:layout_constraintVertical_bias="0.580" android:id="@+id/txtPassword">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:text="@string/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:onClick="handleBtnRegister"
            android:background="@drawable/personalized_button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" android:layout_marginTop="148dp"
            android:layout_marginStart="25dp" android:layout_marginEnd="25dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnLogin"
            android:onClick="handleBtnLogin"
            android:background="@drawable/personalized_button"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.216" android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/txt_password"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textPassword"
            app:layout_constraintBottom_toTopOf="@+id/txtPassword" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.091"
            app:layout_constraintTop_toBottomOf="@+id/txtRegisterEmail" app:layout_constraintVertical_bias="1.0"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/txt_email"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textEmail"
            app:layout_constraintBottom_toTopOf="@+id/txtRegisterEmail" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.105"
            android:layout_marginBottom="4dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="30dp" android:layout_marginEnd="30dp"
            app:layout_constraintVertical_bias="0.437" android:id="@+id/txtRegisterEmail"
            app:layout_constraintHorizontal_bias="0.0">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_email"
                tools:layout_editor_absoluteX="0dp" app:layout_constraintTop_toBottomOf="@+id/txt_title"
                android:layout_marginTop="48dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:text="@string/txt_password2"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textPassword2"
            android:textStyle="bold" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.114"
            app:layout_constraintBottom_toTopOf="@+id/txtPassword2"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" app:layout_constraintVertical_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>